--- a/index.html
+++ b/index.html
@@ -138,28 +138,27 @@
     <div class="mt-4 w-100 animate__animated" id="orangeBox" style="opacity: 0; height: 308px; border-radius: 8px; background-color: #f7941d;">
 
 
-      <div class="d-flex h-100 align-items-center justify-content-center px-4">
-  <div class="d-grid w-100" style="grid-template-columns: 1fr auto; align-items: center;">
-    <!-- Centered Text Block -->
-    <div class="text-center d-flex flex-column align-items-center justify-content-center" style="padding-right: 2rem;">
-      <h4 class="fw-bold mb-3" style="color: white; font-size: 1.8rem;">
-        
-       🏀HOOPS FOR HOMES - July 12
-      </h4>
-      <p class="mb-3 text-white" style="max-width: 360px;">
-        Join our 1v1 basketball tournament at <strong>Nottoway Park</strong> in Vienna for a chance to win a <strong>PS5</strong>!
-        Sign-up is just <strong>$10</strong> and supports families in need across NOVA.
-      </p>
-      <a href="shop.html" class="btn fw-bold px-4" style="background-color: #007BA7; color: white;">Learn More</a>
+      <div class="d-flex flex-column flex-md-row align-items-center justify-content-between h-100 text-center text-md-start px-4">
+  <!-- Text Block -->
+  <div class="d-flex flex-column justify-content-center align-items-center align-items-md-start text-white text-center text-md-center" style="flex: 1; max-width: 500px; margin: 0 auto;">
 
-    </div>
+    <h4 class="fw-bold mb-3" style="color: white; font-size: 1.8rem;">
+      🏀HOOPS FOR HOMES - July 12
+    </h4>
+    <p class="mb-3 text-white" style="max-width: 360px;">
+      Join our 1v1 basketball tournament at <strong>Nottoway Park</strong> in Vienna for a chance to win a <strong>PS5</strong>!
+      Sign-up is just <strong>$10</strong> and supports families in need across NOVA.
+    </p>
+    <a href="shop.html" class="btn fw-bold px-4 mt-2 mx-auto" style="background-color: #007BA7; color: white;">Learn More</a>
 
-    <!-- PS5 Image -->
-    <div>
-      <img src="assets/img/ps5.png" alt="PS5 Prize" class="img-fluid" style="max-height: 180px;">
-    </div>
+  </div>
+
+  <!-- PS5 Image on the right -->
+  <div class="d-none d-md-flex justify-content-end ms-4" style="flex-shrink: 0;">
+    <img src="assets/img/ps5.png" alt="PS5 Prize" class="img-fluid" style="max-height: 180px;">
   </div>
 </div>
+
 
     </div>
   </div>
@@ -247,7 +246,7 @@
 </footer>
 
 <!-- Scripts -->
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+
 <script>
   const orangeBox = document.getElementById('orangeBox');
 
@@ -265,8 +264,7 @@
 
   observerOrange.observe(orangeBox);
 </script>
-<script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/js/js/bootstrap/js/bootstrap.min.js"></script>
+
 <script src="assets/js/js/js/bs-init.js"></script>
 <script src="assets/js/js/js/baguetteBox.min.js"></script>
 <script src="assets/js/js/js/template.js"></script>
@@ -339,5 +337,6 @@
 
   observer.observe(newsletter);
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
 </body>
 </html>
