--- a/about-us.html
+++ b/about-us.html
@@ -30,22 +30,32 @@
 
 <body>
   <nav class="navbar navbar-expand-md sticky-top bg-body shadow-sm py-2">
-    <div class="container-fluid px-4">
-      <a class="navbar-brand d-flex align-items-center me-auto" href="index.html">
-        <img src="assets/img/tabicon.png" style="width: 26.5px; margin-right: 8px;" />
-        <span class="fw-bold">NOVAStrong</span>
-      </a>
-      <div class="d-flex align-items-center gap-4">
-        <ul class="navbar-nav flex-row gap-3 mb-0">
-<li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
-          <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-          <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="projects.html">Future Projects</a></li>
-        </ul>
-        <a class="btn btn-primary btn-sm" role="button" href="donate.html" style="background-color: #0d6efd;border-color: #0d6efd;">Donate</a>
-      </div>
+  <div class="container-fluid d-flex justify-content-between align-items-center px-4">
+    <!-- Logo left -->
+    <a class="navbar-brand d-flex align-items-center me-auto" href="index.html">
+      <img src="assets/img/clipboard-image.png" style="width: 26.5px; margin-right: 8px;" />
+      <span class="fw-bold">NOVAStrong</span>
+    </a>
+
+    <!-- Hamburger button for mobile -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarBlog"
+      aria-controls="navbarBlog" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Nav items & donate button -->
+    <div class="collapse navbar-collapse" id="navbarBlog">
+      <ul class="navbar-nav ms-auto me-1">
+        <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
+        <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="projects.html">Future Projects</a></li>
+      </ul>
+      <a href="donate.html" class="btn btn-primary btn-sm ms-md-3 mt-2 mt-md-0"
+         style="background-color: #0d6efd; border-color: #0d6efd;">Donate</a>
     </div>
-  </nav>
+  </div>
+</nav>
 
 
   <section class="text-center pb-5 mb-5" style="background-color: #ffffff; color: #212121; padding-top: 2rem;">
@@ -152,9 +162,7 @@
   </footer>
 
   <!-- JavaScript -->
-  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/js/js/bootstrap/js/bootstrap.min.js"></script>
+  
   <script src="assets/js/js/js/bs-init.js"></script>
   <script src="assets/js/js/js/baguetteBox.min.js"></script>
   <script src="assets/js/js/js/template.js"></script>
@@ -175,6 +183,6 @@
 
   document.querySelectorAll('.scroll-pop').forEach(el => observer.observe(el));
 </script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
 </body>
 </html>
