--- a/blog.html
+++ b/blog.html
@@ -132,7 +132,8 @@ We shared our vision for NOVAStrong and talked openly about the things we want t
     </p>
   </div>
   <div class="col-md-6 d-flex align-items-center justify-content-center">
-  <img src="assets/img/articles/table.webp" alt="NOVAStrong Table" class="img-fluid rounded shadow">
+  <img src="assets/img/articles/table.webp" alt="NOVAStrong Table" class="img-fluid rounded shadow mb-5">
+
 </div>
 
 </div>
@@ -155,13 +156,14 @@ Even though we didn't hit our original fundraising goal, we gained something eve
   <img class="img-fluid rounded" src="assets/img/articles/baburpic.png" alt="Kyoto" style="max-width: 100%; height: auto;">
   <figcaption class="figure-caption mt-2 text-center">Credit: Zakaria Najmeddine</figcaption>
 </figure>
-                </div>
+                </div><div class="px-3 px-md-0">
                 <div class="col-md-10 col-lg-9 col-xl-8 mx-auto">
                     <div>
                         <h4 class="mt-3 fw-bold">
 Major Win: Narcan Awareness Gains Big Support</h4><br><p>One of the most exciting moments at ViVa Vienna happened when we got to talk about our Narcan Accessibility Campaign with someone who really understood its impact. While chatting with people, we were introduced to <strong>Dr. Babur Lateef</strong>, a candidate for <strong>Virginia Lt. Governor</strong>. <br><br>
 
 We told him how Narcan, a medication that reverses opioid overdoses, is still way too expensive and hard to access—especially for the people who need it most. <br></p>
+
 <div class="row mb-5">
   <!-- Left column: image -->
   <div class="col-md-6 d-flex align-items-center justify-content-center">
@@ -175,7 +177,7 @@ We told him how Narcan, a medication that reverses opioid overdoses, is still wa
 
 Special Thanks to Dr. Lateef for his support! 
 
-</p>
+</p></div>
   </div>
 <!-- Hoops for Homes Section -->
 <div class="row mb-1 mt-5 align-items-center">
