--- a/services.html
+++ b/services.html
@@ -53,6 +53,17 @@
       font-weight: 500;
       margin-bottom: 0.5rem;
     }
+   
+  @media (max-width: 767.98px) {
+    .service-img {
+      width: 100% !important;
+      max-width: 100% !important;
+      height: auto;
+      display: block;
+      margin: 0 auto 1rem auto;
+    }
+  }
+
   </style>
 </head>
 
@@ -94,8 +105,10 @@
     <!-- Tutoring Overview -->
     <div class="container mt-4">
       <div class="d-flex justify-content-center">
-        <div class="d-flex flex-row align-items-center gap-4" style="max-width: 1000px;">
-          <img class="rounded img-fluid" src="assets/img/articles/zane.jpg" alt="Tutoring" style="max-width: 45%; height: auto;" />
+        <div class="d-flex flex-column flex-md-row align-items-center gap-4" style="max-width: 1000px;">
+
+          <img class="rounded img-fluid service-img" src="assets/img/articles/zane.jpg" alt="Tutoring" style="max-width: 45%; height: auto;" />
+
           <div class="card p-3" style="flex: 1;">
             <h4 class="mb-2">Tutoring Services</h4>
             <p style="font-size: 17px;">
@@ -155,7 +168,7 @@
           </div>
 
           <div class="text-center mt-4 text-muted">
-            <strong>Email:</strong> #@novastrongproject.org
+            <strong>Email:</strong> info@novastrongproject.org
           </div>
         </div>
       </div>
@@ -164,12 +177,15 @@
     <!-- Pet Sitting -->
     <div class="container mt-5">
       <div class="d-flex justify-content-center">
-        <div class="d-flex flex-row align-items-center gap-4" style="max-width: 1000px;">
+        <div class="d-flex flex-column flex-md-row align-items-center gap-4" style="max-width: 1000px;">
+
           <div class="card p-3" style="flex: 1;">
             <h4 class="mb-2">Pet Sitting &amp; Care</h4>
             <p style="font-size: 17px;">Need someone to watch your furry friend? Our responsible, trained volunteers provide short-term pet sitting and dog walking services for local families. This is perfect for busy weekdays, short trips, or extra support during vacations.</p>
           </div>
-          <img class="rounded img-fluid" src="assets/img/articles/happy-dogs-sitting-on-bench.jpg" alt="Pet Sitting" style="max-width: 45%; height: auto;" />
+          <img class="rounded img-fluid service-img" src="assets/img/articles/happy-dogs-sitting-on-bench.jpg" alt="Pet Sitting" style="max-width: 45%; height: auto;" />
+
+
         </div>
       </div>
     </div>
@@ -183,15 +199,17 @@
         Our responsible volunteers offer pet sitting and dog walking for families who need extra help during the week or while away. Whether you need care for your dog, cat, or other small pets, we’re happy to assist short-term.
       </p>
       <p class="text-muted small mb-0"><strong>Phone:</strong> (571) 373-0007</p>
-      <p class="text-muted small"><strong>Email:</strong> contact@novastrongproject.com</p>
+      <p class="text-muted small"><strong>Email:</strong> info@novastrongproject.com</p>
     </div>
   </div>
 </div>
     <!-- Senior Visits -->
     <div class="container mt-4 mb-5">
       <div class="d-flex justify-content-center">
-        <div class="d-flex flex-row align-items-center gap-4" style="max-width: 1000px;">
-          <img class="rounded img-fluid" src="assets/img/articles/senior.jpg" alt="Senior Support" style="max-width: 45%; height: auto;" />
+        <div class="d-flex flex-column flex-md-row align-items-center gap-4" style="max-width: 1000px;">
+
+          <img class="rounded img-fluid service-img" src="assets/img/articles/senior.jpg" alt="Senior Support" style="max-width: 45%; height: auto;" />
+
           <div class="card p-3" style="flex: 1;">
             <h4 class="mb-2">Senior Support &amp; Living Center Visits</h4>
             <p style="font-size: 17px;">We build lasting bonds across generations by regularly visiting senior and nursing homes. Our volunteers lead games, art activities, music sessions, and one-on-one chats with residents who could use some company and kindness.</p>
