--- a/about-us.html
+++ b/about-us.html
@@ -68,7 +68,8 @@
 
     <div class="row align-items-center mb-5 flex-row-reverse">
   <div class="col-md-6 scroll-pop">
-  <img src="assets/img/articles/vivavienna.png" class="img-fluid rounded" alt="Mission Photo" />
+  <img src="assets/img/articles/vivavienna.png" class="img-fluid rounded mb-3" alt="Mission Photo" />
+
 </div>
   <div class="col-md-6 scroll-pop">
   <div style="max-width: 500px; margin: 0 auto;">
@@ -104,7 +105,8 @@
 
       <div class="row justify-content-center text-center mb-4 gx-5">
   <!-- Srikanth -->
-  <div class="col-md-4 mb-4 d-none d-md-block custom-divider-end">
+  <div class="col-md-4 mb-4 custom-divider-end">
+
 
     <img src="assets/img/articles/srikanth.png" class="img-fluid mb-4" alt="Srikanth Bala" style="width: 300px; border-radius: 8px;">
     <h5>Srikanth Bala</h5>
@@ -116,7 +118,8 @@
   </div>
 
   <!-- Adam -->
-  <div class="col-md-4 mb-4 d-none d-md-block custom-divider-end">
+  <div class="col-md-4 mb-4 custom-divider-end">
+
 
     <img src="assets/img/articles/adam.png" class="img-fluid mb-4" alt="Adam Najmeddine" style="width: 300px; border-radius: 8px;">
     <h5>Adam Najmeddine</h5>
