--- a/shop.html
+++ b/shop.html
@@ -272,7 +272,7 @@
     <!-- Text Block -->
     <div style="color: white; font-size: 0.95rem; max-width: 680px;" class="sale-text-block">
 
-      <h2 class="fw-bold mb-3" style="font-size: 2.5rem;">🏀 Hoops for Homes – July 12</h2>
+      <h2 class="fw-bold mb-3" style="font-size: 2.5rem;">🏀 Hoops for Homes<be>July 12</h2>
       <p class style ="font-size: 1.05rem;">We’re thrilled to announce "Hoops for Homes," our upcoming charity basketball tournament at <strong>Nottoway Park</strong> in Vienna. Participants will pay a small fee to compete in a 1v1 tournament with a <strong>PS5 Prize</strong>, all to support local families struggling with rent in NOVA. Currently, we need help funding for this event through <strong><a href="donate.html" style="color: #88e7ff; text-decoration: none;">donations</a></strong>.
 
 </p>
@@ -375,7 +375,7 @@
   <div style="flex-shrink: 0; margin-right: 4rem; margin-bottom: 0.5rem;">
   <img src="assets/img/articles/tournament.png"
        alt="Hoops for Homes Flyer"
-       style="max-width: 180px; height: auto;" />
+       style="max-width: 140px; height: auto;" />
 </div>
 </div>
 
