--- a/shop.html
+++ b/shop.html
@@ -372,7 +372,7 @@
   </div>
 
   <!-- RIGHT: Flyer -->
-  <div style="flex-shrink: 0; margin-right: 4rem; margin-bottom: 0.5rem;">
+  <div style="flex-shrink: 0; margin-left: 2rem; margin-right: 4rem; margin-bottom: 0.5rem;">
   <img src="assets/img/articles/tournament.png"
        alt="Hoops for Homes Flyer"
        style="max-width: 140px; height: auto;" />
