--- a/blog.html
+++ b/blog.html
@@ -230,7 +230,7 @@ Special Thanks to Dr. Lateef for his support!
         <img src="assets/img/apparel/newsletterpic.png" class="card-img-top img-fluid" alt="NOVAStrong Merch">
         <div class="card-body text-center">
           <h5 class="card-title fw-bold">Buy NOVAStrong Merch!</h5>
-          <p class="card-text">We’ve officially launched our online clothing shop! Grab your NOVAStrong gear at <a href="https://novastrongproject.org/shop" style="color:#007bff;">novastrongproject.org/shop</a>. Enjoy free shipping if you're located in Vienna, Oakton, or Tysons. Every purchase directly supports our community initiatives, so shop local and make an impact!</p>
+          <p class="card-text">We’ve officially launched our online clothing shop! Grab your NOVAStrong gear at <a href="https://novastrongproject.org/shop" style="color:#007bff;">novastrongproject.org/shop</a>. Enjoy cheap shipping if you're located in Vienna, Oakton, or Tysons. Every purchase directly supports our community initiatives, so shop local and make an impact!</p>
         </div>
       </div>
     </div>
