--- a/404.html
+++ b/404.html
@@ -1,17 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!DOCTYPE html>
+<html data-bs-theme="light" lang="en" data-bss-forced-theme="light">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Page Not Found</title>
-  <style>
-    body {
+
+<style>
+  .custom-divider-end {
+    border-right: 1px solid #007BA7;
+    padding-right: 0px;
+    margin-right: 0px;
+  }
+  body {
       font-family: sans-serif;
       text-align: center;
       padding: 50px;
     }
-  </style>
+</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+  <title>Page Not Found</title>
+<link rel="icon" type="image/png" href="assets/img/tabicon.png">
+
+  <!-- CSS (Bootstrap + Fonts + Custom Styles) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap">
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/css/css/baguetteBox.min.css">
+  <link rel="stylesheet" href="assets/css/css/css/untitled-3.css">
+  <link rel="stylesheet" href="assets/css/css/css/untitled.css">
+  <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
+
+<body>
+  <nav class="navbar navbar-expand-md sticky-top bg-body shadow-sm py-2">
+  <div class="container-fluid d-flex justify-content-between align-items-center px-4">
+    <!-- Logo left -->
+    <a class="navbar-brand d-flex align-items-center me-auto" href="index.html">
+      <img src="assets/img/clipboard-image.png" style="width: 26.5px; margin-right: 8px;" />
+      <span class="fw-bold">NOVAStrong</span>
+    </a>
+
+    <!-- Hamburger button for mobile -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarBlog"
+      aria-controls="navbarBlog" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Nav items & donate button -->
+    <div class="collapse navbar-collapse" id="navbarBlog">
+      <ul class="navbar-nav ms-auto me-1">
+        <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
+        <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="projects.html">Future Projects</a></li>
+      </ul>
+      <a href="donate.html" class="btn btn-primary btn-sm ms-md-3 mt-2 mt-md-0"
+         style="background-color: #0d6efd; border-color: #0d6efd;">Donate</a>
+    </div>
+  </div>
+</nav>
+
 <body>
   <h1>404 - Page Not Found</h1>
   <p>Oops! The page you're looking for doesn’t exist.</p>
