--- a/about-us.html
+++ b/about-us.html
@@ -108,8 +108,8 @@
   <div class="col-md-4 mb-4 custom-divider-end">
 
 
-    <img src="assets/img/articles/srikanth.png" class="img-fluid mb-4" alt="Srikanth Bala" style="width: 300px; border-radius: 8px;">
-    <h5>Srikanth Bala</h5>
+    <img src="assets/img/articles/srikanth.png" class="img-fluid mb-4" alt="..." style="width: 300px; border-radius: 8px;">
+    <h5>...</h5>
     <p>Srikanth is a junior at Madison High School. He is the founder of NOVAStrong and a student leader with a passion for using STEM to create real-world impact. He helps lead community projects focused on equity, service, and innovation. Srikanth was inspired to start NOVAStrong after seeing how access to education and technology can vary between neighborhoods, and the effect it has on the community. Outside of school, he enjoys building electronics, working on design projects, and playing basketball with friends.</p>
 <p class="text-muted small mt-2">
   Phone: <a href="tel:5713730007" style="color: #007BA7; text-decoration: none;">(571) 373-0007</a><br>
