Update images and add Charlie's section in about us

--- a/about-us.html
+++ b/about-us.html
@@ -160,7 +160,7 @@
 
       <!-- Shaan -->
       <div class="col-md-4 mb-4 text-center">
-        <img src="assets/img/articles/shaan.png" class="img-fluid mb-4" alt="Shaan Grover" style="width: 300px; border-radius: 8px;">
+        <img src="assets/img/articles/shaan.jpeg" class="img-fluid mb-4" alt="Shaan Grover" style="width: 300px; border-radius: 8px;">
         <h5>Shaan Grover</h5>
         <div class="text-muted mb-2">Director of Marketing</div>
         <p>As Director of Marketing, Shaan leads outreach and storytelling to grow NOVAStrong’s impact. He supports branding, social media, and community engagement efforts that help raise awareness and support for programs across Northern Virginia.</p>
@@ -170,7 +170,19 @@
         </p>
       </div>
     </div>
-
+		
+	<!-- Charlie -->
+      <div class="col-md-4 mb-4 text-center">
+        <img src="assets/img/articles/charlie.jpeg" class="img-fluid mb-4" alt="Shaan Grover" style="width: 300px; border-radius: 8px;">
+        <h5>Charlie Bergeron</h5>
+        <div class="text-muted mb-2">Director of Growth</div>
+        <p>Place_Holder Text</p>
+        <p class="text-muted small mt-2">
+          Phone: <a href="tel:5713730007" style="color: #007BA7; text-decoration: none;">(571) 373-0007</a><br>
+          Email: <a href="mailto:info@novastrongproject.org" style="color: #007BA7; text-decoration: none;">info@novastrongproject.org</a>
+        </p>
+      </div>
+    </div>
 
     </div>
   </div>
