Update images for Pollination and Home Depot grants

--- a/awards.html
+++ b/awards.html
@@ -46,7 +46,7 @@
       <!-- Pollination Project Grant -->
       <div class="row align-items-center mb-5">
         <div class="col-lg-6 text-center mb-4 mb-lg-0">
-          <img src="assets/img/articles/giantlogo.png" class="img-fluid rounded shadow-sm" style="max-height: 420px; object-fit: contain;" alt="Pollination Project">
+          <img src="assets/img/articles/pollinationproject.jpeg" class="img-fluid rounded shadow-sm" style="max-height: 420px; object-fit: contain;" alt="Pollination Project">
         </div>
         <div class="col-lg-6">
           <div class="card p-4 border-0 shadow-sm">
@@ -61,7 +61,7 @@
       <!-- Home Depot Foundation Grant -->
       <div class="row align-items-center flex-lg-row-reverse">
         <div class="col-lg-6 text-center mb-4 mb-lg-0">
-          <img src="assets/img/articles/header.webp" class="img-fluid rounded shadow-sm" style="max-height: 420px; object-fit: cover;" alt="Home Depot Foundation">
+          <img src="assets/img/articles/TheHomeDepot.jpeg" class="img-fluid rounded shadow-sm" style="max-height: 420px; object-fit: cover;" alt="Home Depot Foundation">
         </div>
         <div class="col-lg-6">
           <div class="card p-4 border-0 shadow-sm">
