--- a/about-us.html
+++ b/about-us.html
@@ -145,47 +145,59 @@
 </p>
   </div>
 </div>
-    <!-- Second row of Mission Leaders -->
-      <div class="row justify-content-center text-center mb-4 gx-5">
-      <!-- Rayan -->
-      <div class="col-md-4 mb-4 custom-divider-end">
-        <img src="assets/img/articles/rayan.png" class="img-fluid mb-4" alt="Rayan Rashid" style="width: 300px; border-radius: 8px;">
-        <h5>Rayan Rashid</h5>
-        <div class="text-muted mb-2">Director of Technology</div>
-        <p>As Director of Technology, Rayan helps build and maintain the tools that power NOVAStrong’s programs. He focuses on improving the website, data systems, and internal workflows so volunteers and families can connect more easily and securely.</p>
-        <p class="text-muted small mt-2">
-          Phone: <a href="tel:5713730007" style="color: #007BA7; text-decoration: none;">(571) 373-0007</a><br>
-          Email: <a href="mailto:info@novastrongproject.org" style="color: #007BA7; text-decoration: none;">info@novastrongproject.org</a>
-        </p>
-      </div>
-
-      <!-- Shaan -->
-      <div class="col-md-4 mb-4 custom-divider-end">
-        <img src="assets/img/articles/shaan2.jpeg" class="img-fluid mb-4" alt="Shaan Grover" style="width: 300px; border-radius: 8px;">
-        <h5>Shaan Grover</h5>
-        <div class="text-muted mb-2">Director of Marketing</div>
-        <p>As Director of Marketing, Shaan leads outreach and storytelling to grow NOVAStrong’s impact. He supports branding, social media, and community engagement efforts that help raise awareness and support for programs across Northern Virginia.</p>
-        <p class="text-muted small mt-2">
-          Phone: <a href="tel:5713730007" style="color: #007BA7; text-decoration: none;">(571) 373-0007</a><br>
-          Email: <a href="mailto:info@novastrongproject.org" style="color: #007BA7; text-decoration: none;">info@novastrongproject.org</a>
-        </p>
-      </div>
-      <!-- Charlie -->
-      <div class="col-md-4 mb-4 text-center">
-        <img src="assets/img/articles/charlie.JPEG" class="img-fluid mb-4" alt="Charlie Bergeron" style="width: 300px; height: 300px; object-fit: cover; object-position: 50% 35%; border-radius: 8px;">
-        <h5>Charlie Bergeron</h5>
-        <div class="text-muted mb-2">Director of Growth</div>
-        <p>As Director of Growth, Charlie helps expand NOVAStrong’s partnerships and outreach so we can serve more families and neighborhoods across NOVA.</p>
-        <p class="text-muted small mt-2">
-          Phone: <a href="tel:5713730007" style="color: #007BA7; text-decoration: none;">(571) 373-0007</a><br>
-          Email: <a href="mailto:info@novastrongproject.org" style="color: #007BA7; text-decoration: none;">info@novastrongproject.org</a>
-        </p>
-      </div>
-    </div>
-
-    </div>
+<!-- Second row of Mission Leaders (David, Rayan, Shaan) -->
+<div class="row justify-content-center text-center mb-4 gx-5">
+  <!-- David (new, placed first) -->
+  <div class="col-md-4 mb-4 custom-divider-end">
+    <img src="assets/img/articles/david.jpeg" class="img-fluid mb-4" alt="David Nam" style="width: 300px; height: 300px; object-fit: cover; border-radius: 8px;">
+    <h5>David Nam</h5>
+    <div class="text-muted mb-2">Vice Executive Director</div>
+    <p>As Vice Executive Director, David supports NOVAStrong’s operations and partnerships, helping align programs and outreach with the organization’s mission.</p>
+    <p class="text-muted small mt-2">
+      Phone: <a href="tel:5713730007" style="color: #007BA7; text-decoration: none;">(571) 373-0007</a><br>
+      Email: <a href="mailto:info@novastrongproject.org" style="color: #007BA7; text-decoration: none;">info@novastrongproject.org</a>
+    </p>
   </div>
-</section>
+
+  <!-- Rayan -->
+  <div class="col-md-4 mb-4 custom-divider-end">
+    <img src="assets/img/articles/rayan.png" class="img-fluid mb-4" alt="Rayan Rashid" style="width: 300px; border-radius: 8px;">
+    <h5>Rayan Rashid</h5>
+    <div class="text-muted mb-2">Director of Technology</div>
+    <p>As Director of Technology, Rayan helps build and maintain the tools that power NOVAStrong’s programs. He focuses on improving the website, data systems, and internal workflows so volunteers and families can connect more easily and securely.</p>
+    <p class="text-muted small mt-2">
+      Phone: <a href="tel:5713730007" style="color: #007BA7; text-decoration: none;">(571) 373-0007</a><br>
+      Email: <a href="mailto:info@novastrongproject.org" style="color: #007BA7; text-decoration: none;">info@novastrongproject.org</a>
+    </p>
+  </div>
+
+  <!-- Shaan -->
+  <div class="col-md-4 mb-4 text-center">
+    <img src="assets/img/articles/shaan2.jpeg" class="img-fluid mb-4" alt="Shaan Grover" style="width: 300px; border-radius: 8px;">
+    <h5>Shaan Grover</h5>
+    <div class="text-muted mb-2">Director of Marketing</div>
+    <p>As Director of Marketing, Shaan leads outreach and storytelling to grow NOVAStrong’s impact. He supports branding, social media, and community engagement efforts that help raise awareness and support for programs across Northern Virginia.</p>
+    <p class="text-muted small mt-2">
+      Phone: <a href="tel:5713730007" style="color: #007BA7; text-decoration: none;">(571) 373-0007</a><br>
+      Email: <a href="mailto:info@novastrongproject.org" style="color: #007BA7; text-decoration: none;">info@novastrongproject.org</a>
+    </p>
+  </div>
+</div>
+
+<!-- Third row (single card) -->
+<div class="row justify-content-center text-center mb-4 gx-5">
+  <!-- Charlie (moved down) -->
+  <div class="col-md-4 mb-4 text-center">
+    <img src="assets/img/articles/charlie.JPEG" class="img-fluid mb-4" alt="Charlie Bergeron" style="width: 300px; height: 300px; object-fit: cover; object-position: 50% 35%; border-radius: 8px;">
+    <h5>Charlie Bergeron</h5>
+    <div class="text-muted mb-2">Director of Growth</div>
+    <p>As Director of Growth, Charlie helps expand NOVAStrong’s partnerships and outreach so we can serve more families and neighborhoods across NOVA.</p>
+    <p class="text-muted small mt-2">
+      Phone: <a href="tel:5713730007" style="color: #007BA7; text-decoration: none;">(571) 373-0007</a><br>
+      Email: <a href="mailto:info@novastrongproject.org" style="color: #007BA7; text-decoration: none;">info@novastrongproject.org</a>
+    </p>
+  </div>
+</div>
 
 
 <div id="contact"></div>
